Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74515

When forcing the Aqua style via the Info.plist it can end up drawing treeview indicators incorrectly

XMLWordPrintable

    • macOS
    • 913dd26c92f406e3da83ed83701ce47e659bcc48 a868942b11a586861e167aaafaa9c65fde23e88d (qt/qtbase/wip/qt6)

      When forcing the Aqua style via the Info.plist it can end up drawing treeview indicators incorrectly when the system is in dark mode. When the application starts up it is fine, however after opening the Help menu (assuming you are running an English macOS to allow the merging) then it will cause them to be drawn incorrectly when you click on and then away from them. They are "there" but are drawn as white on white so they are not appearing as they should.

        For Gerrit Dashboard: QTBUG-74515
        # Subject Branch Project Status CR V

            tpochep Timur Pocheptsov
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes